--- a/LunchTimeApp/LunchTimeMCP/LunchTimeMCP/LunchTimeMCP.csproj
+++ b/LunchTimeApp/LunchTimeMCP/LunchTimeMCP/LunchTimeMCP.csproj
@@ -7,4 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.6" />
+    <PackageReference Include="ModelContextProtocol" Version="0.3.0-preview.1" />
+    <PackageReference Include="System.Text.Json" Version="9.0.6" />
+  </ItemGroup>
+
 </Project>
